unpackaged/main/default/objects/FLHA__c/FLHA__c.object-meta.xml
<CustomObject>
    <label>FLHA</label>
    <nameField>
        <displayFormat>FLHA-{00000000}</displayFormat>
        <label>FLHA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FLHAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>