unpackaged/main/default/objects/FLHA__c/fields/CSA_Grade_ID_Visible2__c.field-meta.xml
<CustomField>
    <fullName>CSA_Grade_ID_Visible2__c</fullName>
    <label>CSA Grade ID Visible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>