unpackaged/main/default/objects/FLHA__c/fields/CSA_Grade_ID_Visible__c.field-meta.xml
<CustomField>
    <fullName>CSA_Grade_ID_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSA Grade ID Visible</label>
    <type>Checkbox</type>
</CustomField>