unpackaged/main/default/objects/FLHA__c/fields/CustIntCon2__c.field-meta.xml
<CustomField>
    <fullName>CustIntCon2__c</fullName>
    <label>Customer Interaction Controls</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>