unpackaged/main/default/objects/FLHA__c/fields/CustInteractControlsFiles2__c.field-meta.xml
<CustomField>
    <fullName>CustInteractControlsFiles2__c</fullName>
    <label>Customer Interaction Controls Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>