unpackaged/main/default/objects/FLHA__c/fields/CustInteractHazardsFiles2__c.field-meta.xml
<CustomField>
    <fullName>CustInteractHazardsFiles2__c</fullName>
    <label>Customer Interaction Hazards Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>