unpackaged/main/default/objects/FLHA__c/fields/CustIntHaz2__c.field-meta.xml
<CustomField>
    <fullName>CustIntHaz2__c</fullName>
    <label>Customer Interaction Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>