unpackaged/main/default/objects/FLHA__c/fields/CustIntHaz__c.field-meta.xml
<CustomField>
    <fullName>CustIntHaz__c</fullName>
    <label>Customer Interaction Hazards</label>
    <type>TextArea</type>
</CustomField>