unpackaged/main/default/objects/FLHA__c/fields/Customer_Plant_Hazards2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Plant_Hazards2__c</fullName>
    <label>Customer Plant Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>