unpackaged/main/default/objects/FLHA__c/fields/CustomerPlantControlsFiles2__c.field-meta.xml
<CustomField>
    <fullName>CustomerPlantControlsFiles2__c</fullName>
    <label>Customer Plant Controls Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>