unpackaged/main/default/objects/FLHA__c/fields/CustomerPlantHazardsFiles2__c.field-meta.xml
<CustomField>
    <fullName>CustomerPlantHazardsFiles2__c</fullName>
    <label>Customer Plant Hazards Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>