unpackaged/main/default/objects/FLHA__c/fields/Drilling_Hazards_Files2__c.field-meta.xml
<CustomField>
    <fullName>Drilling_Hazards_Files2__c</fullName>
    <label>Drilling Hazards Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>