unpackaged/main/default/objects/FLHA__c/fields/Driving_Control_Files2__c.field-meta.xml
<CustomField>
    <fullName>Driving_Control_Files2__c</fullName>
    <label>Driving Control Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>