unpackaged/main/default/objects/FLHA__c/fields/Driving_Controls2__c.field-meta.xml
<CustomField>
    <fullName>Driving_Controls2__c</fullName>
    <label>Driving Controls</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>