unpackaged/main/default/objects/FLHA__c/fields/Driving_Hazard_Files2__c.field-meta.xml
<CustomField>
    <fullName>Driving_Hazard_Files2__c</fullName>
    <label>Driving Hazard Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>