unpackaged/main/default/objects/FLHA__c/fields/Driving_Hazards2__c.field-meta.xml
<CustomField>
    <fullName>Driving_Hazards2__c</fullName>
    <label>Driving Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>