unpackaged/main/default/objects/FLHA__c/fields/Driving_Hazards__c.field-meta.xml
<CustomField>
    <fullName>Driving_Hazards__c</fullName>
    <label>Driving Hazards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traffic Congestion</fullName>
            </value>
            <value>
                <fullName>Hit By Passing Vehicle While Parked</fullName>
            </value>
            <value>
                <fullName>Driving Distractions</fullName>
            </value>
            <value>
                <fullName>Contact with structures or obstacles while moving the vehicle.</fullName>
            </value>
            <value>
                <fullName>Sunlight Glare</fullName>
            </value>
            <value>
                <fullName>Poor Road Conditions</fullName>
            </value>
            <value>
                <fullName>Poor Weather Conditions</fullName>
            </value>
            <value>
                <fullName>Theft/Damage In Unsecured Parking</fullName>
            </value>
            <value>
                <fullName>Poorly Lit Area</fullName>
            </value>
            <value>
                <fullName>Assets In Visible Sight Lines</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>