unpackaged/main/default/objects/FLHA__c/fields/DVIR_Completed__c.field-meta.xml
<CustomField>
    <fullName>DVIR_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DVIR Completed</label>
    <type>Checkbox</type>
</CustomField>