unpackaged/main/default/objects/FLHA__c/fields/Electronic_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Agreement</label>
    <type>Checkbox</type>
</CustomField>