unpackaged/main/default/objects/FLHA__c/fields/End_Caps_Secured_No_Damage2__c.field-meta.xml
<CustomField>
    <fullName>End_Caps_Secured_No_Damage2__c</fullName>
    <label>End Caps Secured No Damage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>