unpackaged/main/default/objects/FLHA__c/fields/End_Caps_Secured_No_Damage__c.field-meta.xml
<CustomField>
    <fullName>End_Caps_Secured_No_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Caps Secured No Damage</label>
    <type>Checkbox</type>
</CustomField>