unpackaged/main/default/objects/FLHA__c/fields/Fibre_Terminate_Controls_Files2__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Terminate_Controls_Files2__c</fullName>
    <label>Fibre Terminate Controls Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>