unpackaged/main/default/objects/FLHA__c/fields/Fibre_Termination_Hazards2__c.field-meta.xml
<CustomField>
    <fullName>Fibre_Termination_Hazards2__c</fullName>
    <label>Fibre Termination Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>