unpackaged/main/default/objects/FLHA__c/fields/First_Job__c.field-meta.xml
<CustomField>
    <fullName>First_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Job</label>
    <type>Checkbox</type>
</CustomField>