unpackaged/main/default/objects/FLHA__c/fields/Fit_For_Duty2__c.field-meta.xml
<CustomField>
    <fullName>Fit_For_Duty2__c</fullName>
    <label>Fit For Duty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>