unpackaged/main/default/objects/FLHA__c/fields/Fit_For_Duty__c.field-meta.xml
<CustomField>
    <fullName>Fit_For_Duty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fit For Duty</label>
    <type>Checkbox</type>
</CustomField>