unpackaged/main/default/objects/FLHA__c/fields/Hazards_Not_Controlled2__c.field-meta.xml
<CustomField>
    <fullName>Hazards_Not_Controlled2__c</fullName>
    <label>Hazards Not Controlled</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>