unpackaged/main/default/objects/FLHA__c/fields/Hazards_Not_Controlled__c.field-meta.xml
<CustomField>
    <fullName>Hazards_Not_Controlled__c</fullName>
    <label>Hazards Not Controlled</label>
    <type>TextArea</type>
</CustomField>