unpackaged/main/default/objects/FLHA__c/fields/Heavy_Lift_Controls_Files2__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Lift_Controls_Files2__c</fullName>
    <label>Heavy Lift Controls Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>