unpackaged/main/default/objects/FLHA__c/fields/Heavy_Lifting_Hazards2__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Lifting_Hazards2__c</fullName>
    <label>Heavy Lifting Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>