unpackaged/main/default/objects/FLHA__c/fields/HeavyEquipCon2__c.field-meta.xml
<CustomField>
    <fullName>HeavyEquipCon2__c</fullName>
    <label>Heavy Equipment Controls</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>