unpackaged/main/default/objects/FLHA__c/fields/HeavyEquipControlsFiles2__c.field-meta.xml
<CustomField>
    <fullName>HeavyEquipControlsFiles2__c</fullName>
    <label>Heavy Equipment Controls Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>