unpackaged/main/default/objects/FLHA__c/fields/HeavyEquipHaz2__c.field-meta.xml
<CustomField>
    <fullName>HeavyEquipHaz2__c</fullName>
    <label>Heavy Equipment Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>