unpackaged/main/default/objects/FLHA__c/fields/HeavyEquipHazardsFiles2__c.field-meta.xml
<CustomField>
    <fullName>HeavyEquipHazardsFiles2__c</fullName>
    <label>Heavy Equipment Hazards Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>