unpackaged/main/default/objects/FLHA__c/fields/Heights_Elevated_Platform_Trained2__c.field-meta.xml
<CustomField>
    <fullName>Heights_Elevated_Platform_Trained2__c</fullName>
    <label>Heights/Elevated Platform Trained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>