unpackaged/main/default/objects/FLHA__c/fields/Heights_Elevated_Platform_Trained__c.field-meta.xml
<CustomField>
    <fullName>Heights_Elevated_Platform_Trained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heights/Elevated Platform Trained</label>
    <type>Checkbox</type>
</CustomField>