unpackaged/main/default/objects/FLHA__c/fields/Heights_Ladder_Controls2__c.field-meta.xml
<CustomField>
    <fullName>Heights_Ladder_Controls2__c</fullName>
    <label>Heights Ladder Controls</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>