unpackaged/main/default/objects/FLHA__c/fields/Heights_Ladder_Hazards2__c.field-meta.xml
<CustomField>
    <fullName>Heights_Ladder_Hazards2__c</fullName>
    <label>Heights Ladder Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>