unpackaged/main/default/objects/FLHA__c/fields/Heights_Platform_Hazards2__c.field-meta.xml
<CustomField>
    <fullName>Heights_Platform_Hazards2__c</fullName>
    <label>Heights Platform Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>