unpackaged/main/default/objects/FLHA__c/fields/High_Risk_Area_Controls_Files2__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Area_Controls_Files2__c</fullName>
    <label>High Risk Area Controls Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>