unpackaged/main/default/objects/FLHA__c/fields/HighRiskAreaCon2__c.field-meta.xml
<CustomField>
    <fullName>HighRiskAreaCon2__c</fullName>
    <label>High Risk Area Controls</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>