unpackaged/main/default/objects/FLHA__c/fields/HighRiskAreaHaz2__c.field-meta.xml
<CustomField>
    <fullName>HighRiskAreaHaz2__c</fullName>
    <label>High Risk Area Hazards</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>