unpackaged/main/default/objects/FLHA__c/fields/Hinges_Not_Loose2__c.field-meta.xml
<CustomField>
    <fullName>Hinges_Not_Loose2__c</fullName>
    <label>Hinges Not Loose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>