unpackaged/main/default/objects/FLHA__c/fields/Hinges_Not_Loose__c.field-meta.xml
<CustomField>
    <fullName>Hinges_Not_Loose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hinges Not Loose</label>
    <type>Checkbox</type>
</CustomField>