unpackaged/main/default/objects/FLHA__c/fields/Incident_Reported_To_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Incident_Reported_To_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incident Reported To Supervisor</label>
    <type>Checkbox</type>
</CustomField>