unpackaged/main/default/objects/FLHA__c/fields/Inspected_Harness_Lanyard2__c.field-meta.xml
<CustomField>
    <fullName>Inspected_Harness_Lanyard2__c</fullName>
    <label>Inspected Harness/Lanyard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>