unpackaged/main/default/objects/FLHA__c/fields/Inspected_Harness_Lanyard__c.field-meta.xml
<CustomField>
    <fullName>Inspected_Harness_Lanyard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspected Harness/Lanyard</label>
    <type>Checkbox</type>
</CustomField>