unpackaged/main/default/objects/FLHA__c/fields/Job_Require_Driving__c.field-meta.xml
<CustomField>
    <fullName>Job_Require_Driving__c</fullName>
    <label>Does the job require driving?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>