unpackaged/main/default/objects/FLHA__c/fields/Ladder_Controls_Files2__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Controls_Files2__c</fullName>
    <label>Ladder Controls Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>