unpackaged/main/default/objects/FLHA__c/fields/Ladder_Hazards_Files2__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Hazards_Files2__c</fullName>
    <label>Ladder Hazards Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>