unpackaged/main/default/objects/FLHA__c/fields/Ladder_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ladder Inspected</label>
    <type>Checkbox</type>
</CustomField>