unpackaged/main/default/objects/FLHA__c/fields/Ladder_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Inspection_Date__c</fullName>
    <label>Ladder Inspection Date</label>
    <type>Date</type>
</CustomField>