unpackaged/main/default/objects/FLHA__c/fields/Ladder_Labeled_Load_Duty2__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Labeled_Load_Duty2__c</fullName>
    <label>Ladder Labeled Load Duty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>