unpackaged/main/default/objects/FLHA__c/fields/Ladder_Labeled_Load_Duty__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Labeled_Load_Duty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ladder Labeled Load Duty</label>
    <type>Checkbox</type>
</CustomField>