unpackaged/main/default/objects/FLHA__c/fields/Ladder_Parts_Defect_Free__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Parts_Defect_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ladder Parts Defect Free</label>
    <type>Checkbox</type>
</CustomField>