unpackaged/main/default/objects/FLHA__c/fields/Ladder_Tagged_Colored_Tape__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Tagged_Colored_Tape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ladder Tagged Colored Tape</label>
    <type>Checkbox</type>
</CustomField>