unpackaged/main/default/objects/FLHA__c/fields/Last_Job__c.field-meta.xml
<CustomField>
    <fullName>Last_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Job</label>
    <type>Checkbox</type>
</CustomField>