unpackaged/main/default/objects/FLHA__c/fields/Lift_Secured__c.field-meta.xml
<CustomField>
    <fullName>Lift_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lift Secured</label>
    <type>Checkbox</type>
</CustomField>