unpackaged/main/default/objects/FLHA__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Street__c &amp; &quot;, &quot; &amp;
 City__c &amp; &quot;, &quot; &amp;
 State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>