unpackaged/main/default/objects/FLHA__c/fields/Lock_Latch_Not_Missing2__c.field-meta.xml
<CustomField>
    <fullName>Lock_Latch_Not_Missing2__c</fullName>
    <label>Lock Latch Not Missing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>