unpackaged/main/default/objects/FLHA__c/fields/Lock_Latch_Not_Missing__c.field-meta.xml
<CustomField>
    <fullName>Lock_Latch_Not_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Latch Not Missing</label>
    <type>Checkbox</type>
</CustomField>