unpackaged/main/default/objects/FLHA__c/fields/Lock_Latch_Parts_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Lock_Latch_Parts_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Latch Parts Engaged</label>
    <type>Checkbox</type>
</CustomField>