unpackaged/main/default/objects/FLHA__c/fields/LTS_Ladder_Used2__c.field-meta.xml
<CustomField>
    <fullName>LTS_Ladder_Used2__c</fullName>
    <label>LTS Ladder Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>