unpackaged/main/default/objects/FLHA__c/fields/LTS_Ladder_Used__c.field-meta.xml
<CustomField>
    <fullName>LTS_Ladder_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LTS Ladder Used</label>
    <type>Checkbox</type>
</CustomField>