unpackaged/main/default/objects/FLHA__c/fields/Other_Controls_Files2__c.field-meta.xml
<CustomField>
    <fullName>Other_Controls_Files2__c</fullName>
    <label>Other Controls Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>