unpackaged/main/default/objects/FLHA__c/fields/Pail_Tray_Functional2__c.field-meta.xml
<CustomField>
    <fullName>Pail_Tray_Functional2__c</fullName>
    <label>Pail Tray Functional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>