unpackaged/main/default/objects/FLHA__c/fields/Pail_Tray_Functional__c.field-meta.xml
<CustomField>
    <fullName>Pail_Tray_Functional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pail Tray Functional</label>
    <type>Checkbox</type>
</CustomField>