unpackaged/main/default/objects/FLHA__c/fields/Platform_Hazards_Files2__c.field-meta.xml
<CustomField>
    <fullName>Platform_Hazards_Files2__c</fullName>
    <label>Platform Hazards Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>