unpackaged/main/default/objects/FLHA__c/fields/Required_PPE2__c.field-meta.xml
<CustomField>
    <fullName>Required_PPE2__c</fullName>
    <label>Required PPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>