unpackaged/main/default/objects/FLHA__c/fields/Required_PPE__c.field-meta.xml
<CustomField>
    <fullName>Required_PPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required PPE</label>
    <type>Checkbox</type>
</CustomField>