unpackaged/main/default/objects/FLHA__c/fields/Ropes_Not_Frayed2__c.field-meta.xml
<CustomField>
    <fullName>Ropes_Not_Frayed2__c</fullName>
    <label>Ropes Not Frayed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>