unpackaged/main/default/objects/FLHA__c/fields/Ropes_Not_Frayed__c.field-meta.xml
<CustomField>
    <fullName>Ropes_Not_Frayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ropes Not Frayed</label>
    <type>Checkbox</type>
</CustomField>