unpackaged/main/default/objects/FLHA__c/fields/Ropes_Not_Tangled__c.field-meta.xml
<CustomField>
    <fullName>Ropes_Not_Tangled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ropes Not Tangled</label>
    <type>Checkbox</type>
</CustomField>