unpackaged/main/default/objects/FLHA__c/fields/Rungs_Steps_Not_Slippery2__c.field-meta.xml
<CustomField>
    <fullName>Rungs_Steps_Not_Slippery2__c</fullName>
    <label>Rungs Steps Not Slippery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>