unpackaged/main/default/objects/FLHA__c/fields/Rungs_Steps_Not_Slippery__c.field-meta.xml
<CustomField>
    <fullName>Rungs_Steps_Not_Slippery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rungs Steps Not Slippery</label>
    <type>Checkbox</type>
</CustomField>