unpackaged/main/default/objects/FLHA__c/fields/RungsStepsSecurelyConnected2__c.field-meta.xml
<CustomField>
    <fullName>RungsStepsSecurelyConnected2__c</fullName>
    <label>Rungs Steps Securely Connected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>