unpackaged/main/default/objects/FLHA__c/fields/RungsStepsSecurelyConnected__c.field-meta.xml
<CustomField>
    <fullName>RungsStepsSecurelyConnected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rungs Steps Securely Connected</label>
    <type>Checkbox</type>
</CustomField>