unpackaged/main/default/objects/FLHA__c/fields/Running_Cable_Hazards_Files2__c.field-meta.xml
<CustomField>
    <fullName>Running_Cable_Hazards_Files2__c</fullName>
    <label>Running Cable Hazards Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>